--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,22 @@ MAINN
 ASIDEE
 /* FOOTER */
 
-
 /* RESET  - resetea los estilos por defecto del navegador */
 
-html, body, div, span, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, em, img,
-small, strike, strong, sub, sup, center, ul, li,
-fieldset, form, label, article, aside,
-figure, figcaption, footer, header,
+html, body, div, span, iframe, 
+h1, h2, h3, h4, h5, h6, p, 
+blockquote, em, img, small, strike, 
+strong, sub, sup, center, ul, li, 
+fieldset, form, label, article, aside, 
+figure, figcaption, footer, header, 
 menu, nav, section, audio, video {
-  	margin: 0;
+	box-sizing: border-box;
+	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	vertical-align: baseline; /* "baseline" El elemento está alineado con la línea base del padre */
+	vertical-align: baseline;
+	/* "baseline" El elemento está alineado con la línea base del padre */
 	/* box-sizing: content-box; */
 }
 
@@ -26,7 +28,6 @@ html {
 	font-family: 'Roboto', sans-serif;
 	color: whitesmoke;
 	background-color: #091c3b;
-
 }
 
 figcaption {
@@ -40,12 +41,12 @@ h4 { font-size: 1em; }
 h5 { font-size: 0.8em; }
 h6 { font-size: 0.7em; }
 
-main, img{
+main, img {
 	display: block;
 }
 
 .button, a, a:focus {
-	outline:none;
+	outline: none;
 }
 
 li {
@@ -56,21 +57,20 @@ a {
 	text-decoration: none;
 }
 
-
-/* HEADERR */
+/* HEADER */
 
 .Header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* background-color: #091c3b; */
-    /* background-color: #060e23; */
-    padding: .5rem 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* background-color: #091c3b; */
+	/* background-color: #060e23; */
+	padding: .5rem 1rem;
 	max-width: 100vw;
 }
 
 .Header a {
-    color: whitesmoke;
+	color: whitesmoke;
 }
 
 .Header__menu {
@@ -78,7 +78,7 @@ a {
 }
 
 .Header__menu-li {
-    margin-left: 3rem;
+	margin-left: 3rem;
 }
 
 .Header__menu-a:hover {
@@ -110,10 +110,9 @@ a {
 	border-radius: 3px;
 	top: 1.2rem;
 	left: -1.5rem;
-	box-sizing: border-box;
+	/* box-sizing: border-box; */
 	z-index: 2;
-
-	
+	/* height: 100%; */
 }
 
 .Header__submenu-li {
@@ -121,16 +120,82 @@ a {
 	text-align: center;
 }
 
+/* .Header__submenu-li:hover {
+	padding: .5rem;
+	text-align: center;
+} */
+
+/* .Header__submenu-a {
+	width: 100%;
+	height: 100%;
+} */
 .Header__submenu-a:hover {
 	color: #78fee9;
+	/* color: #060e23; */
+	/* background-color:#78fee9; */
 	/* transition: 0.3s ease; */
 }
 
 /* quita comportamiento del link */
+
 /* .Header__open-submenu > a {
 		pointer-events: none;
 		cursor: default;
 } */
+
+.Header__check {
+	display: none
+}
+
+/* HEADER-RESPONSIVE ///////////////////////////////////*/
+
+@media (max-width: 800px) {
+	.Header__button {
+		cursor: pointer;
+	}
+	.Header__button div {
+		width: 35px;
+		height: 5px;
+		background-color: white;
+		margin: 6px 0;
+	}
+	.Header__menu {
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: center;
+		position: absolute;
+		left: 0px;
+		right: 0;
+		top: -350px;
+		background-color: #060e23;
+		font-size: 1.3rem;
+		height: 40%;
+		transition: .4s;
+		z-index: 1;
+	}
+	.Header__check:checked~.Header__menu {
+		transition: .5s;
+		top: 4rem;
+	}
+
+	/* .Header__menu li:hover {
+		border: 1px solid #78fee9;
+	} */
+	/* .Header__menu {
+		z-index: 1;
+	} */
+	/* .Header__menu a {
+		display: block;
+	} */
+
+	.Header__submenu {
+		left: -2rem;
+		top: 1.5rem;
+	}
+	.Header__open-submenu:hover .Header__submenu {
+		height: 160px;
+	}
+}
 
 /* MAIN */
 
@@ -140,14 +205,13 @@ a {
 	vertical-align: top;
 }
 
-
-
 /* SLIDER ////////////////////////////////////////*/
 
 .Slides {
 	position: relative;
 	overflow: hidden;
 	background-color: #060e23;
+	/* background-color: #060e23; */
 	/* background-color: #091c3b; */
 	/* color: whitesmoke; */
 }
@@ -182,14 +246,16 @@ a {
 .Slides__header h2 {
 	font-weight: 400;
 	font-size: 2.5rem;
+	text-shadow: 2px 3px rgb(204, 204, 204, .5);
 }
 
 .Slides__header h2 span {
 	color: #78fee9;
-	/* font-style: oblique; */
+	font-style: oblique;
 	/* font-weight: 500; */
 	margin-left: 1rem;
 	font-size: 2rem;
+	/* text-shadow: 2px 3px rgb(204, 204, 204, .5); */
 }
 
 .Slides__body {
@@ -202,7 +268,7 @@ a {
 	color: #0f86f7;
 }
 
-.Slides__body span{
+.Slides__body span {
 	font-size: 2.5rem;
 	margin-left: 1rem;
 }
@@ -214,14 +280,13 @@ a {
 	align-self: flex-end;
 }
 
-
-.Slides__footer h4{
+.Slides__footer h4 {
 	font-size: 1.5rem;
 	font-weight: 300;
 	margin-right: .5rem;
 }
 
-.Slides__footer a{
+.Slides__footer a {
 	/* font-size: 1rem; */
 	font-weight: 500;
 	border-radius: 3px;
@@ -232,28 +297,25 @@ a {
 	transition: 0.3s ease;
 }
 
-.Slides__footer a:hover{
+.Slides__footer a:hover {
 	background-color: #78fee9;
-	color: 	black;
+	color: black;
 }
-
 
 /* Slide 2 /////////////////////////////////*/
 
-
-.Slides--2
-.Slides__body {
+.Slides--2 .Slides__body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	width: 90%;
-	height: 80%;
+	height: 100%;
 }
 
 .Slides__body article {
 	display: flex;
 	align-items: center;
-	width: 300px;
+	width: 500px;
 }
 
 .Slides__body article:nth-child(2) {
@@ -264,6 +326,7 @@ a {
 	color: #78fee9;
 	font-weight: 400;
 	font-size: 2rem;
+	text-shadow: 2px 2px rgb(204, 204, 204, .5);
 }
 
 .Slides__body p {
@@ -272,35 +335,33 @@ a {
 }
 
 .Slides__body img {
-	margin-right: .5rem;
+	margin-right: 1rem;
 }
 
-.Slides--2 
-.Slides__footer a{
+.Slides--2 .Slides__footer a {
 	border: 2px solid #0f86f7;
 }
 
-.Slides--2 
-.Slides__footer a:hover{
+.Slides--2 .Slides__footer a:hover {
 	background-color: #0f86f7;
 }
 
 /* SLIDE 3 */
 
-.Slides--3 
-article > h2{
+.Slides--3 article>h2 {
 	color: whitesmoke;
 	font-weight: 500;
 	font-size: 3.5rem;
 	margin-right: .5rem;
+	text-shadow: 4px 5px rgb(204, 204, 204, .5);
 }
 
-.Slides--3 
-.Slides__body {
+.Slides--3 .Slides__body {
 	margin-top: 1.7rem;
 }
 
 /* VER TRANSICIONES!!!!!, PODEMOS CONSSEGUIR EL MISMO EFECTO CON TRANSOTION: EASE...???????? */
+
 /* VER TRANSICIONES!!!!!, PODEMOS CONSSEGUIR EL MISMO EFECTO CON TRANSOTION: EASE...???????? */
 
 .Slide__js {
@@ -308,17 +369,14 @@ article > h2{
 	animation-duration: 2s;
 }
 
-
-
 @keyframes Slide__js {
-    from {
-        opacity: .5
-    }
-    to {
-        opacity: 1
-    }
+	from {
+		opacity: .5
+	}
+	to {
+		opacity: 1
+	}
 }
-
 
 /* DESCRIPTION */
 
@@ -330,7 +388,7 @@ article > h2{
 	/* background-color: #091c3b; */
 }
 
-.Description article{
+.Description article {
 	width: 600px;
 	margin: auto;
 }
@@ -345,12 +403,12 @@ article > h2{
 	font-weight: 400;
 	color: #78fee9;
 }
+
 .Description p {
 	margin-top: 2rem;
 	font-size: 1.5rem;
 	font-weight: 100;
 	font-style: italic;
-
 }
 
 /* FEATURES */
@@ -385,29 +443,27 @@ article > h2{
 	/* color: #1b98ec */
 }
 
-.Features__article p {	
+.Features__article p {
 	font-size: 1.5rem;
 	font-weight: 100;
 	/* text-align: justify; */
-
 	/* color: #1b98ec */
 }
 
 .Features [class^="ico"] {
 	color: #78fee9;
 	font-size: 2.5rem;
-	
 }
 
 /* Articulos__ //////////////////////////////*/
 
-.Articulos{
+.Articulos {
 	background-color: #091c3b;
 	padding-top: 3rem;
 	padding-bottom: auto;
 }
 
-.Articulos__title{
+.Articulos__title {
 	font-size: 2rem;
 	margin-left: 1rem;
 	margin-right: 1rem;
@@ -422,22 +478,21 @@ article > h2{
 	padding: 3rem 1rem;
 }
 
-.Articulos article{
+.Articulos article {
 	width: 280px;
 	position: relative;
 	border: 1px solid #0f86f7;
 }
 
-
-.Articulos img{
+.Articulos img {
 	max-width: 100%;
 	opacity: .8;
 	/* transition: .9s ease; */
 }
 
-.Articulos__links h3{
+.Articulos__links h3 {
 	top: 5%;
-	position:absolute;
+	position: absolute;
 	color: whitesmoke;
 	padding: .5rem;
 	background-color: #0f86f7;
@@ -445,8 +500,8 @@ article > h2{
 	/* color: #0f86f7; */
 }
 
-
-.Articulos__layerHover{ /* azul claro al hacer hover*/
+.Articulos__layerHover {
+	/* azul claro al hacer hover*/
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -454,25 +509,25 @@ article > h2{
 	transition: .5s ease;
 }
 
-.Articulos__layerHover:hover{
+.Articulos__layerHover:hover {
 	background-color: #091c3b;
 	opacity: .9;
 }
 
-.Articulos__texto{
+.Articulos__texto {
 	margin-left: 1rem;
 	opacity: 0;
 	transition: 1.5s ease;
 }
 
-.Articulos__layerHover:hover .Articulos__texto{
+.Articulos__layerHover:hover .Articulos__texto {
 	opacity: 1;
 	margin-top: 2rem;
 }
 
-.Articulos__button{
+.Articulos__button {
 	text-align: center;
-	border:  1px solid #78fee9;
+	border: 1px solid #78fee9;
 	position: absolute;
 	bottom: 5%;
 	color: white;
@@ -488,7 +543,7 @@ article > h2{
 	color: #121212;
 }
 
-.Articulos__texto p{
+.Articulos__texto p {
 	font-weight: 100;
 	margin-bottom: .2rem;
 }
@@ -503,36 +558,27 @@ article > h2{
 	font-weight: 500;
 }
 
-
-
-
-.Articulos--blog
-.Articulos__title {
+.Articulos--blog .Articulos__title {
 	border-bottom: 4px solid #78fee9;
 }
 
-.Articulos--blog
-.Articulos article{
+.Articulos--blog .Articulos article {
 	border: 1px solid #78fee9;
 }
 
-.Articulos--blog 
-.Articulos__links h3{
+.Articulos--blog .Articulos__links h3 {
 	background-color: #78fee9;
 	color: #060e23;
 }
 
-.Articulos--blog
-.Articulos__button{
-	border:  1px solid #0f86f7;
+.Articulos--blog .Articulos__button {
+	border: 1px solid #0f86f7;
 }
 
-.Articulos--blog
-.Articulos__button:hover {
+.Articulos--blog .Articulos__button:hover {
 	background-color: #0f86f7;
 	color: #121212;
 }
-
 
 /* ASIDEE */
 
@@ -542,18 +588,17 @@ article > h2{
 	display: inline-block;
 }
 
-
-
 /* TABSS */
 
 .Tabs__header {
 	display: flex;
 	overflow: hidden;
-    background-color: #091c3b;
+	background-color: #091c3b;
 	cursor: pointer;
 }
 
 /* pestañas: */
+
 .Tabs__tab {
 	border: 1px solid #0f86f7;
 	color: #0f86f7;
@@ -571,9 +616,10 @@ article > h2{
 }
 
 /* contenido */
+
 .Tabs__tab-content {
 	position: relative;
-    padding: 1.5rem 1rem;
+	padding: 1.5rem 1rem;
 	background-color: #091c3b;
 	height: 200px;
 }
@@ -592,8 +638,6 @@ article > h2{
 	right: .5rem;
 }
 
-
-
 /* ACCORDION ///////////////////////////////////////*/
 
 .Acordeon {
@@ -602,7 +646,7 @@ article > h2{
 	/* border-top: 1px solid black */
 }
 
-.Acordeon h2{
+.Acordeon h2 {
 	/* border-bottom: 1px solid #f2f2f2; */
 	/* margin-left: 1rem; */
 	/* padding-bottom: .5rem; */
@@ -624,53 +668,51 @@ article > h2{
 }
 
 .Acordeon-button {
-    /* background-color: #fff; */
-    background-color: #060e23;
+	/* background-color: #fff; */
+	background-color: #060e23;
 	/* color: #0f86f7; */
 	color: #78fee9;
 	border: 1px solid #78fee9;
-    /* color: #00bdff; */
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    /* border: 1px solid #00bdff; */
-    /* border-top: 0; */
-    /* border-left: 0; */
-    /* border-right: 0; */
-    /* border-bottom: 1px solid #f2f2f2; */
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
+	/* color: #00bdff; */
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	/* border: 1px solid #00bdff; */
+	/* border-top: 0; */
+	/* border-left: 0; */
+	/* border-right: 0; */
+	/* border-bottom: 1px solid #f2f2f2; */
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+	transition: 0.4s;
 }
 
 .Acordeon-button.activo, .Acordeon-button:hover {
-    /* background-color: #e8f4f9; */
+	/* background-color: #e8f4f9; */
 	/* color: #3b94d9; */
 	color: #0f86f7;
 	border: 1px solid #0f86f7;
-
-	
 }
 
 .Acordeon-button:after {
-    content: '\002B';
-    color: #00bdff;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
+	content: '\002B';
+	color: #00bdff;
+	font-weight: bold;
+	float: right;
+	margin-left: 5px;
 }
 
 .Acordeon-button.activo:after {
-    content: "\2212";
+	content: "\2212";
 }
 
 div.contenido {
-    padding: 0 18px;
-    /* background-color: white; */
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
+	padding: 0 18px;
+	/* background-color: white; */
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s ease-out;
 }
 
 /* FOOTER  */
@@ -685,7 +727,7 @@ div.contenido {
 	padding: 2.5rem .5rem;
 }
 
-.Footer nav ul{
+.Footer nav ul {
 	display: flex;
 	justify-content: space-around;
 }
@@ -696,8 +738,7 @@ div.contenido {
 	margin-left: 1rem;
 	margin-right: 1rem;
 	font-size: 1rem;
-
-}	
+}
 
 .Footer-social {
 	font-size: 2rem;
@@ -707,97 +748,119 @@ div.contenido {
 	margin-right: 1rem;
 }
 
-
-
 /* MODAL ////////////////////////////////////////////*/
 
 .Modal {
-	display: none; 
+	display: none;
 	/* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(9,28,59,0.6); /* Black w/ opacity */
-    -webkit-animation-name: fadeIn; /* Fade in the background */
-    -webkit-animation-duration: .7s;
-    animation-name: fadeIn;
-    animation-duration: .7s
+	position: fixed;
+	/* Stay in place */
+	z-index: 1;
+	/* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%;
+	/* Full width */
+	height: 100%;
+	/* Full height */
+	overflow: auto;
+	/* Enable scroll if needed */
+	background-color: rgba(9, 28, 59, 0.6);
+	/* Black w/ opacity */
+	-webkit-animation-name: fadeIn;
+	/* Fade in the background */
+	-webkit-animation-duration: .7s;
+	animation-name: fadeIn;
+	animation-duration: .7s
 }
 
 /* Modal Content */
+
 .Modal-content {
 	border: 1px solid #78fee9;
 	/* border: 1px solid #0f86f7; */
-    position: fixed;
-    left: 0;
-	right:0;
-    /* opacity: .9; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    height: 80%;
-    /* background-color: rgba(254,254,254,0.9); */
+	position: fixed;
+	left: 0;
+	right: 0;
+	/* opacity: .9; */
+	/* margin-left: auto; */
+	/* margin-right: auto; */
+	margin: auto;
+	top: 0;
+	bottom: 0;
+	height: 80%;
+	/* background-color: rgba(254,254,254,0.9); */
 	background-color: black;
 	/* background-color: #091c3b; */
-
 	/* color: #0f86f7; */
-    width: 50%;
-    -webkit-animation-name: slideIn;
-    -webkit-animation-duration: 0.4s;
-    animation-name: slideIn;
-    animation-duration: 0.4s
+	width: 50%;
+	-webkit-animation-name: slideIn;
+	-webkit-animation-duration: 0.4s;
+	animation-name: slideIn;
+	animation-duration: 0.4s
 }
 
 /* The Close Button */
+
 .Modal-close {
 	color: #78fee9;
 	position: absolute;
 	bottom: 0;
 	right: 1rem;
-    /* float: right; */
-    font-size: 3rem;
-    /* font-weight: bold; */
-    /* margin-top: -3rem; */
+	/* float: right; */
+	font-size: 3rem;
+	/* font-weight: bold; */
+	/* margin-top: -3rem; */
 	/* margin-right: 1rem; */
 	/* background-color: #0f86f7; */
 }
 
-.Modal-close:hover,
-.Modal-close:focus {
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
+.Modal-close:hover, .Modal-close:focus {
+	color: #fff;
+	text-decoration: none;
+	cursor: pointer;
 }
 
-
-.Modal-body {padding: 2px 16px;}
-
+.Modal-body {
+	padding: 2px 16px;
+}
 
 /* Add Animation */
+
 @-webkit-keyframes slideIn {
-    from {opacity: 0} 
-    to { opacity: 1}
+	from {
+		opacity: 0
+	}
+	to {
+		opacity: 1
+	}
 }
 
 @keyframes slideIn {
-    from { opacity: 0}
-    to {opacity: 1}
+	from {
+		opacity: 0
+	}
+	to {
+		opacity: 1
+	}
 }
 
 @-webkit-keyframes fadeIn {
-    from {opacity: 0} 
-    to {opacity: 1}
+	from {
+		opacity: 0
+	}
+	to {
+		opacity: 1
+	}
 }
 
 @keyframes fadeIn {
-    from {opacity: 0} 
-    to {opacity: 1}
+	from {
+		opacity: 0
+	}
+	to {
+		opacity: 1
+	}
 }
 
 .Modal input, .Modal textarea {
@@ -806,7 +869,7 @@ div.contenido {
 	width: 80%;
 	margin: .5rem auto;
 	font-size: 1.1rem;
-	border:  1px solid #78fee9;
+	border: 1px solid #78fee9;
 	/* font-style	: italic; */
 	/* font-weight: 300; */
 	color: whitesmoke;
@@ -814,8 +877,6 @@ div.contenido {
 	font-weight: 400;
 	/* background-color: #f2f2f2; */
 }
-
-
 
 .Modal form {
 	margin-top: 3rem;
@@ -825,7 +886,6 @@ div.contenido {
 
 .Modal textarea {
 	height: 40vh;
-
 }
 
 .button--form {
@@ -834,8 +894,6 @@ div.contenido {
 	font-size: 1.2rem;
 	cursor: pointer;
 }
-
-
 
 /* BUTTONS */
 
@@ -849,40 +907,31 @@ div.contenido {
 	transition: 0.3s ease;
 }
 
-.button:hover{
+.button:hover {
 	background-color: #78fee9;
-	color: 	black;
+	color: black;
 }
 
 .button--blue {
 	border: 2px solid #0f86f7;
 }
 
-.button--blue:hover{
+.button--blue:hover {
 	background-color: #0f86f7;
 }
-
-
-
-
-
-
 
 /* ICONOS */
 
 @font-face {
 	font-family: 'icomoon';
-	src:  url('../fonts/icomoon.eot?zi0881');
-	src:  url('../fonts/icomoon.eot?zi0881#iefix') format('embedded-opentype'),
-	  url('../fonts/icomoon.ttf?zi0881') format('truetype'),
-	  url('../fonts/icomoon.woff?zi0881') format('woff'),
-	  url('../fonts/icomoon.svg?zi0881#icomoon') format('svg');
+	src: url('../fonts/icomoon.eot?zi0881');
+	src: url('../fonts/icomoon.eot?zi0881#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?zi0881') format('truetype'), url('../fonts/icomoon.woff?zi0881') format('woff'), url('../fonts/icomoon.svg?zi0881#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
-  }
-  
-  [class^="icon-"], [class*=" icon-"] {
+}
+
+[class^="icon-"], [class*=" icon-"] {
 	/* use !important to prevent issues with browser extensions that change fonts */
 	font-family: 'icomoon' !important;
 	speak: none;
@@ -892,77 +941,88 @@ div.contenido {
 	text-transform: none;
 	line-height: 1;
 	font-size: 1.5rem;
-  
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-  }
+}
 
-  .icon-hbs:before {
+.icon-hbs:before {
 	content: "\e90c";
 	color: orange;
-  }
-  .icon-css3:before {
+}
+
+.icon-css3:before {
 	content: "\e904";
 	color: #1572b6;
-  }
-  .icon-mongodb:before {
+}
+
+.icon-mongodb:before {
 	content: "\e90a";
 	color: #47a248;
-  }
-  .icon-node-dot-js:before {
+}
+
+.icon-node-dot-js:before {
 	content: "\e90b";
 	color: #393;
-  }
-  .icon-sass:before {
+}
+
+.icon-sass:before {
 	content: "\e908";
 	color: #c69;
-  }
-  .icon-webpack:before {
+}
+
+.icon-webpack:before {
 	content: "\e909";
 	color: #8dd6f9;
-  }
-  .icon-html5:before {
+}
+
+.icon-html5:before {
 	content: "\e901";
 	color: #e34f26;
-  }
-  .icon-javascript:before {
+}
+
+.icon-javascript:before {
 	content: "\e902";
 	color: #f7df1e;
-  }
-  .icon-facebook:before {
+}
+
+.icon-facebook:before {
 	content: "\e900";
 	color: #1877f2;
-  }
-  .icon-github:before {
+}
+
+.icon-github:before {
 	content: "\e906";
-  }
-  .icon-instagram:before {
+}
+
+.icon-instagram:before {
 	content: "\e907";
 	color: #e4405f;
-  }
-  .icon-twitter:before {
+}
+
+.icon-twitter:before {
 	content: "\e903";
 	color: #1da1f2;
-  }
-  .icon-pencil:before {
+}
+
+.icon-pencil:before {
 	content: "\e905";
-  }
-  .icon-folder-open:before {
+}
+
+.icon-folder-open:before {
 	content: "\e930";
-  }
-  .icon-users:before {
+}
+
+.icon-users:before {
 	content: "\e972";
-  }
-  .icon-clipboard:before {
+}
+
+.icon-clipboard:before {
 	content: "\e9b8";
-  }
+}
 
-
-
-  
-  
 /* COLORS */
+
 .green {
 	color: #78fee9;
 }
@@ -970,32 +1030,31 @@ div.contenido {
 .blue {
 	color: #0f86f7;
 	font-weight: ;
-	}
-	
+}
+
 /* WEIGHTS */
 
 .w100 {
 	font-weight: 100;
 }
+
 .w300 {
 	font-weight: 300;
 }
+
 .w400 {
 	font-weight: 400;
 }
+
 .w500 {
 	font-weight: 500;
 }
-	
-	
-	
-	
-	
-	
 
 .colores {
-		color: #060e23; /* background header */
-		color: #0f86f7;
-		color: #78fee9;
-		color: #091c3b; /* background SLIDES (claro)*/
+	color: #060e23;
+	/* background header */
+	color: #0f86f7;
+	color: #78fee9;
+	color: #091c3b;
+	/* background SLIDES (claro)*/
 }
