--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,37 @@ a {
 	/* height: 100%; */
 }
 
+.Header__submenu:hover {
+	overflow: visible;
+}
+
 .Header__submenu-li {
 	padding: .5rem;
 	text-align: center;
+	position: relative;
+	/* overflow: visible; */
 }
+
+.titletext {
+	background-color: #78fee9;
+	/* border: 1px solid #78fee9; */
+	color: black;
+	width: 130px;
+	text-align: center;
+	position: absolute;
+	left: 90%;
+	top: 2px;
+	padding: 5px 3px;
+	border-radius: 6px;
+	visibility: hidden;
+}
+  
+.title:hover .titletext {
+	visibility: visible;
+}
+
+
+
 
 /* .Header__submenu-li:hover {
 	padding: .5rem;
@@ -135,6 +162,11 @@ a {
 	/* color: #060e23; */
 	/* background-color:#78fee9; */
 	/* transition: 0.3s ease; */
+}
+
+.no-link {
+	pointer-events: none;
+	cursor: default;
 }
 
 /* quita comportamiento del link */
