test link hover article1

--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,7 @@ a {
 	/* border-top: 1px solid white; */
 	padding-top: 4rem;
 	padding-bottom: 4rem;
+	position: relative;
 	/* width: 100%; */
 	/* background-color: #060e23; */
 	/* background-color: #091c3b; */
@@ -569,6 +570,7 @@ a {
 	padding-bottom: 7rem;
 	padding-top: 6rem;
 	text-align: center;
+	position: relative;
 }
 
 .Features__article {
@@ -678,6 +680,7 @@ a {
 	position: absolute;
 	z-index: 1;
 	transition: .5s ease;
+	cursor: pointer;
 }
 
 .Articulos__layerHover:hover {
@@ -1178,6 +1181,12 @@ div.contenido {
 
 .button--blue:hover {
 	background-color: #0f86f7;
+}
+
+.button--inf {
+	position: absolute;
+	bottom: .5rem;
+	right: .5rem;
 }
 
 /* ICONOS */
