--- a/css/blog.css
+++ b/css/blog.css
@@ -85,11 +85,30 @@ code {
     font-weight: 200;
 }
 
-/* .gist-file, .gist-data, .gist-meta, .file-box, .file, .data, .gist {
+.gist-file, .gist-data, .gist-meta, .file-box, .file, .data, .gist {
     margin-left: 0rem !important;
     margin-bottom: 0rem !important;
     margin-top: 0rem !important;
-} */
+
+}
 
 
 
+
+.container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
