--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-/* 
-HEADERR 
-MAINN
-ASIDEE
+/* HEADER */
+/* MAINN */
+/* ASIDEE */
 /* FOOTER */
+/* DESCRIPTION */
+/* ACORDEON */
 
 /* RESET  - resetea los estilos por defecto del navegador */
 
@@ -64,7 +65,7 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	/* background-color: #091c3b; */
+	background-color: #091c3b;
 	/* background-color: #060e23; */
 	padding: .5rem 1rem;
 	max-width: 100vw;
@@ -227,6 +228,9 @@ a {
 	}
 	.Header__open-submenu:hover .Header__submenu {
 		height: 160px;
+	}
+	.titletext {
+		font-size: 1rem;
 	}
 }
 
@@ -559,6 +563,17 @@ a {
 	font-style: italic;
 }
 
+@media (max-width: 800px){
+	.Description h2 {
+		font-size: 2rem;
+	}
+	
+	.Description h3 {
+		font-size: 2rem;
+	}
+	
+}
+
 /* FEATURES */
 
 .Features {
@@ -679,7 +694,7 @@ a {
 	height: 100%;
 	position: absolute;
 	z-index: 1;
-	transition: .5s ease;
+	transition: 1s ease;
 	cursor: pointer;
 }
 
@@ -689,7 +704,7 @@ a {
 }
 
 .Articulos__texto {
-	transition: 1.5s ease;
+	transition: 1s ease;
 	margin-left: 1rem;
 	opacity: 0;
 }
@@ -867,7 +882,7 @@ a {
 	right: .5rem;
 }
 
-/* ACCORDION ///////////////////////////////////////*/
+/* ACORDEON */
 
 .Acordeon {
 	/* margin-top: 8rem; */
@@ -877,14 +892,15 @@ a {
 
 .Acordeon h2 {
 	/* border-bottom: 1px solid #f2f2f2; */
-	/* margin-left: 1rem; */
+	/* margin-left: .5rem; */
 	/* padding-bottom: .5rem; */
 	margin-bottom: .5rem;
 	font-weight: 400;
 	/* background-color: #0f86f7; */
 	/* background-color: #78fee9; */
-	color: #0f86f7;
+	/* color: #0f86f7; */
 	/* color: #060e23; */
+	color: whitesmoke;
 }
 
 .Acordeon img {
@@ -944,6 +960,13 @@ div.contenido {
 	transition: max-height 0.2s ease-out;
 }
 
+@media (max-width: 800px) {
+	.Acordeon h2 {
+		margin-left: .5rem;
+	}
+}
+
+
 /* FOOTER  */
 
 .Footer {
@@ -961,7 +984,7 @@ div.contenido {
 	justify-content: space-around;
 }
 
-.Footer a {
+.Footer-nav a {
 	color: #0f86f7;
 	text-decoration: underline;
 	margin-left: 1rem;
@@ -975,6 +998,10 @@ div.contenido {
 
 .Footer-social span {
 	margin-right: 1rem;
+}
+
+.Footer-social a:visited {
+	color: white
 }
 
 
