--- a/css/blog.css
+++ b/css/blog.css
@@ -16,7 +16,8 @@
 @media (max-width: 800px) {
 	.MainBlog {
 		width: 100%;
-		display: block;
+        display: block;
+        padding: 1rem;
     }
 }
 
@@ -48,6 +49,10 @@
     margin-top: 1.5rem;
 }
 
+.Post__body h3{
+    margin-top: 1rem;
+}
+
 .Post__body p{
     margin-bottom: .5rem;
 }
@@ -61,7 +66,7 @@
 
 /* .Post--vsc */
 .Post__body div{
-    margin-left: 1.5rem;
+    /* margin-left: 1.5rem; */
     margin-bottom: 3rem;
     margin-top: 1rem;
 }
