--- a/css/curso.css
+++ b/css/curso.css
@@ -36,6 +36,8 @@
 .Info h1 {
 	margin-bottom: 1rem;
 	color: #1584d5;
+	border-bottom: 2px solid #ccc;
+	padding-bottom: .5rem;
 }
 
 .Info__general {
@@ -82,7 +84,7 @@
 
 .Programa {
 	/* width: 45%; */
-	width: 90%;
+	/* width: 90%; */
 	margin-top: 4rem;
 	margin-left: auto;
 	margin-right: auto;
@@ -92,6 +94,8 @@
 	color: #1584d5;
 	font-size: 1.5rem;
 	margin-bottom: 1.2rem;
+	border-bottom: 2px solid #ccc;
+	padding-bottom: .3rem;
 }
 
 .Programa__button {
